--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,109 @@
-tqdm==4.60.0
-pandas==1.2.4
-matplotlib==3.3.2
-plotly==4.11.0
-numpy==1.19.2
+angel-cd==1.0.3
+appdirs==1.4.4
+argon2-cffi @ file:///C:/ci/argon2-cffi_1613037959010/work
+async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
+attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+bimlpa==0.1.2
+bleach @ file:///tmp/build/80754af9/bleach_1628110601003/work
+cdlib==0.2.4
+certifi==2021.5.30
+cffi @ file:///C:/ci/cffi_1625831749120/work
+charset-normalizer==2.0.6
+chinese-whispers==0.7.5
+click==8.0.1
+colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
+cycler==0.10.0
+Cython==0.29.23
+debugpy @ file:///C:/ci/debugpy_1629222854708/work
+decorator==4.4.2
+defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+demon==2.0.6
+docopt==0.6.2
+dynetx==0.3.0
+entrypoints==0.3
+eva-lcd==0.1.1
+Flask==2.0.1
+future==0.18.2
+gensim==4.1.2
+idna==3.2
+importlib-metadata @ file:///C:/ci/importlib-metadata_1631053185730/work
+infomap==1.4.1
+ipykernel @ file:///C:/ci/ipykernel_1629995240690/work/dist/ipykernel-6.2.0-py3-none-any.whl
+ipython @ file:///C:/ci/ipython_1628244008373/work
+ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+itsdangerous==2.0.1
+jedi @ file:///C:/ci/jedi_1611315808330/work
+Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
+joblib==1.0.1
+jsonschema @ file:///Users/ktietz/demo/mc3/conda-bld/jsonschema_1630511932244/work
+jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1630690655192/work
+jupyter-core @ file:///C:/ci/jupyter_core_1612213356021/work
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+karateclub==1.2.2
+kiwisolver==1.3.2
+leidenalg==0.8.7
+markov-clustering==0.0.6.dev0
+MarkupSafe @ file:///C:/ci/markupsafe_1621528314575/work
+matplotlib==3.4.3
+matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
+mistune==0.8.4
+nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
+nbconvert @ file:///C:/ci/nbconvert_1624479163777/work
+nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
+nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
+networkx==2.6.3
+nf1==0.0.4
+notebook @ file:///C:/ci/notebook_1629205926310/work
+numpy==1.21.2
+packaging @ file:///tmp/build/80754af9/packaging_1625611678980/work
+pandas==1.3.3
+pandocfilters @ file:///C:/ci/pandocfilters_1605102497129/work
+parso @ file:///tmp/build/80754af9/parso_1617223946239/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow==8.3.2
+pipreqs==0.4.10
+plotly==5.3.1
+pooch==1.5.1
+prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
+prompt-toolkit @ file:///Users/ktietz/demo/mc3/conda-bld/prompt-toolkit_1629146841569/work
+PuLP==2.5.1
+pyclustering==0.10.1.2
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+Pygments @ file:///tmp/build/80754af9/pygments_1629234116488/work
+PyGSP==0.5.1
+pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
+pyrsistent @ file:///C:/ci/pyrsistent_1600141795814/work
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+python-igraph==0.9.6
+python-Levenshtein==0.12.2
+python-louvain==0.15
+pytz==2021.1
+pywin32==228
+pywinpty==0.5.7
+pyzmq @ file:///C:/ci/pyzmq_1628276144921/work
+requests==2.26.0
+scikit-learn==1.0
+scipy==1.7.1
+seaborn==0.11.2
+Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
+six @ file:///tmp/build/80754af9/six_1623709665295/work
+smart-open==5.2.1
+tabulate==0.8.9
+tenacity==8.0.1
+terminado==0.9.4
+testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
+texttable==1.6.4
+threadpoolctl==2.2.0
+thresholdclustering==1.1
+tornado @ file:///C:/ci/tornado_1606942392901/work
+tqdm==4.62.3
+traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
+urllib3==1.26.7
+wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+webencodings==0.5.1
+Werkzeug==2.0.1
+wincertstore==0.2
+wurlitzer==3.0.2
+yarg==0.1.9
+zipp @ file:///tmp/build/80754af9/zipp_1625570634446/work
